my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.4/errors/ENAMECOLL/T_ENAMECOLL-struct.h.tmp
/* Generated by dmlc, do not edit! */

#ifndef T_ENAMECOLL_STRUCT_H
#define T_ENAMECOLL_STRUCT_H

typedef struct test test_t;

conf_class_t *_initialize_T_ENAMECOLL(void);

extern void  m_dup(conf_object_t *_obj);

#endif /* not T_ENAMECOLL_STRUCT_H */
